ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/IKOPRO_Contractor_Benefit__c.object-meta.xml
<CustomObject>
    <description>Junction object to link Benefits with Contactors</description>
    <label>(Deprecated) Contractor Benefit</label>
    <nameField>
        <label>Benefit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>