ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MD Lookup to Benefit for a certain Contractor.</description>
    <label>Benefit</label>
    <referenceTo>IKOPRO_Benefit__c</referenceTo>
    <relationshipName>Contractor_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>