ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>From Date the Benefit applies fo the Contractor</description>
    <label>From</label>
    <type>Date</type>
</CustomField>