ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when the Benefit does not apply to the Contractor anymore.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>