ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/fields/Tiers__c.field-meta.xml
<CustomField>
    <fullName>Tiers__c</fullName>
    <description>Filled with PB to show to which Tiers the Benefit belongs (used within flow)</description>
    <label>Tiers</label>
    <length>16</length>
    <type>Text</type>
</CustomField>