ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/recordTypes/Benefit_with_Application.recordType-meta.xml
<RecordType>
    <fullName>Benefit_with_Application</fullName>
    <active>true</active>
    <label>Benefit with Application</label>
</RecordType>