ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/recordTypes/Benefit_without_Application.recordType-meta.xml
<RecordType>
    <fullName>Benefit_without_Application</fullName>
    <active>true</active>
    <label>Benefit without Application</label>
</RecordType>