ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/recordTypes/Inactive_Benefit_with_Application.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Benefit_with_Application</fullName>
    <active>true</active>
    <label>Inactive Benefit with Application</label>
</RecordType>