ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Contractor_Benefit__c/listViews/My_Benefits.listView-meta.xml
<ListView>
    <fullName>My_Benefits</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Benefits</label>
    <language>en_US</language>
</ListView>